Changes to the dice roller . Temporarily fixed the bug with the animation getting stuck on open . Added a Dice component . Added the typical dice to the dice window . Added the function to roll the selected dice (currently outputs to the console) . Added a display to the dice roller window, which shows the dice to be thrown and the results
notes:
. The fix for the stuck open bug currently also removes the exit animation, so the window just disappears
. Figure out a way to better format the dice display

--- a/client/src/styles/diceRoller.css
+++ b/client/src/styles/diceRoller.css
@@ -11,5 +11,31 @@
 
     background-color: #3B3F53;
     padding: 5px;
-    width: 10%;
+    width: 100px;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 5px;
+}
+
+.dice {
+    width: 50%;
+    aspect-ratio: 1/1;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    border-radius: 15%;
+}
+
+.roll-button {
+    width: 90%;
+}
+
+.dice-display {
+    width: 90%;
+    border: solid white 1px;
+    font-size: 18px;
 }
